--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
-  "name": "eme-contacts-backend",
+  "name": "eme-contacts-service",
   "version": "0.0.1",
-  "description": "",
+  "description": "Contact management microservice",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+		"import": "node scripts/parse.js"
   },
   "author": "Julius Pedersen",
   "license": "MIT",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/tuuturu/eme-contacts-service"
+	},
   "dependencies": {
     "@tuuturu/sane-redis-wrapper": "0.0.2",
     "axios": "^0.19.2",
