--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -16,6 +16,9 @@ jobs:
         with:
           node-version: '12.x'
           registry-url: https://npm.pkg.github.com
+          scope: '@tuuturu'
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
       - run: npm ci
       #- run: npm test
 
@@ -47,6 +50,9 @@ jobs:
         with:
           node-version: '12.x'
           registry-url: https://npm.pkg.github.com
+          scope: '@tuuturu'
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
       - run: npm ci --only=production
 
       - run: echo "::set-env name=RELEASE_VERSION::$(jq -r .version package.json)"
