--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -15,6 +15,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '12.x'
+          always-auth: true
           registry-url: https://npm.pkg.github.com
           scope: '@tuuturu'
         env:
@@ -48,6 +49,7 @@ jobs:
       - name: Use Node.js 12
         uses: actions/setup-node@v1
         with:
+          always-auth: true
           node-version: '12.x'
           registry-url: https://npm.pkg.github.com
           scope: '@tuuturu'
